prometheus/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.jamiechapmanbrn.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.jamiechapmanbrn.com/oauth2/start?rd=https://grafana.jamiechapmanbrn.com"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: grafana.jamiechapmanbrn.com
    http:
      paths:
        - backend:
            serviceName: grafana
            servicePort: 3000
  tls:
  - hosts:
    - grafana.jamiechapmanbrn.com
    secretName: grafana.jamiechapmanbrn.com.tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.jamiechapmanbrn.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.jamiechapmanbrn.com/oauth2/start?rd=https://prometheus.jamiechapmanbrn.com"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: prometheus.jamiechapmanbrn.com
    http:
      paths:
        - backend:
            serviceName: prometheus-k8s
            servicePort: 9090
  tls:
  - hosts:
    - prometheus.jamiechapmanbrn.com
    secretName: prometheus.jamiechapmanbrn.com.tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.jamiechapmanbrn.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.jamiechapmanbrn.com/oauth2/start?rd=https://alertmanager.jamiechapmanbrn.com"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: alertmanager.jamiechapmanbrn.com
    http:
      paths:
        - backend:
            serviceName: alertmanager-main
            servicePort: 9093  
  tls:
  - hosts:
    - alertmanager.jamiechapmanbrn.com
    secretName: alertmanager.jamiechapmanbrn.com.tls
